Fix inventory panel, setting editor, right click actions